fix the gap in button group

--- a/stage03/view/assets/css/styles.css
+++ b/stage03/view/assets/css/styles.css
@@ -5,5 +5,6 @@
 .btn-group > .btn {
   float:none;
   display:inline-block;
+  margin-right:-2px;
 }
 
